// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataTablePagination /> Pagination with few pages should match the snapshot 1`] = `
<div
  className="-pagination"
>
  <PageSizeOptions
    onPageSizeChange={[MockFunction]}
    page={2}
    pageSize={25}
    pageSizeOptions={
      Array [
        5,
        10,
        20,
        100,
      ]
    }
    showPageSizeOptions={false}
  />
  <PageDetails
    page={2}
    pageSize={25}
    totalCount={70}
  />
  <div
    className="page-navigation"
  >
    <button
      className="previous -btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Memo(FontAwesomeIcon)
        icon="chevron-left"
        type="solid"
      />
    </button>
    <button
      className="page-button -btn"
      key="0"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="page-button -btn"
      key="1"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="current page-button -btn"
      key="2"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="next -btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <Memo(FontAwesomeIcon)
        icon="chevron-right"
        type="solid"
      />
    </button>
  </div>
</div>
`;

exports[`<DataTablePagination /> Pagination with many pages should match the snapshot 1`] = `
<div
  className="-pagination"
>
  <PageSizeOptions
    onPageSizeChange={[MockFunction]}
    page={3}
    pageSize={10}
    pageSizeOptions={
      Array [
        5,
        10,
        20,
        100,
      ]
    }
    showPageSizeOptions={false}
  />
  <PageDetails
    page={3}
    pageSize={10}
    totalCount={295}
  />
  <div
    className="page-navigation"
  >
    <button
      className="previous -btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Memo(FontAwesomeIcon)
        icon="chevron-left"
        type="solid"
      />
    </button>
    <button
      className="page-button -btn"
      key="0"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="page-button -btn"
      key="1"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="page-button -btn"
      key="2"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="current page-button -btn"
      key="3"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="page-button -btn"
      key="4"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <span
      className="ellipsis"
      key="5"
    >
      ...
    </span>
    <button
      className="page-button -btn"
      key="6"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
    <button
      className="next -btn"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Memo(FontAwesomeIcon)
        icon="chevron-right"
        type="solid"
      />
    </button>
  </div>
</div>
`;
